[gd_scene load_steps=4 format=3 uid="uid://owaqwx0og1v7"]

[ext_resource type="Script" path="res://entities/player.gd" id="1_a6cuh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tox55"]
radius = 18.0
height = 60.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_y120n"]

[node name="Player" type="CharacterBody2D"]
floor_stop_on_slope = false
floor_max_angle = 1.22173
floor_snap_length = 32.0
script = ExtResource("1_a6cuh")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_tox55")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(36, 60)
texture = SubResource("PlaceholderTexture2D_y120n")

[node name="Camera" type="Camera2D" parent="."]

[node name="JumpTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.4
one_shot = true

[node name="CoyoteTime" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
